--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "swiper": "^4.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
