--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-vue": "^5.2.2",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
